# RiskWatch

./: .condarc  .env.sample  .envrc  .gitignore  .infisical.json  README.md  __init__.py  add_secret.sh  alembic.ini  alembic.ini.new  batch_collection_20241224_073919.json  batch_collection_20241224_074642.json  batch_collection_20241224_075456.json  batch_collection_20241224_081248.json  batch_collection_20241224_081811.json  batch_collection_20241224_082201.json  batch_collection_20241224_082328.json  curl_response.txt  docker-compose.yml  entrypoint.sh  environment.yml  prometheus.yml  requirements.txt  run_test.sh  setup.py  test_api_max_articles.json  test_comments_20241224_064207.json  test_comments_20241224_064241.json  test_comments_20241224_064431.json  test_comments_20241224_064736.json  test_comments_20241224_065201.json  test_comments_20241224_070232.json  test_comments_20241224_070506.json  test_comments_20241224_070808.json  test_comments_20241224_070954.json  test_comments_20241224_071107.json  test_comments_20241224_071217.json  test_comments_20241224_071232.json  test_comments_20241224_071649.json  test_comments_20241224_071717.json  (+3 more)
common/: pyproject.toml
news_collector/: README.md  __init__.py  producer.py  pyproject.toml  requirements.txt  setup.py
news_collector/collectors/: __init__.py  api_metadata_collector.py  base.py  collector_simplification_strategy.md  comments.py  content.py  interactive_collector.py  metadata.py  search_metadata_collector.py  stats.bak  stats.py  test.py  web_metadata_collector.py  콜렉터개선방안.md
news_collector/collectors/simple/: README.md  __init__.py  collector.py  examples.py  naver.py  requirements.txt  storage.py
news_collector/collectors/utils/: date.py  factory.py  http.py  text.py  url.py  user_agent.py  webdriver_utils.py
news_collector/core/utils/: __init__.py  date.py  http.py  publisher_domain_mapping.json  url.py  webdriver_utils.py
news_collector/fast_api/: Dockerfile  Dockerfile.worker  pyproject.toml
news_collector/fast_api/app/: main.py
news_collector/parallel/: __init__.py  executor.py  parallel_metadata_collector.py  proxy.py
news_collector/ui/: Dockerfile  README.md  app.py  collection_service.py  decorators.py  logging_config.py  requirements.txt  visualization.py
news_collector/utils/: date.py  text.py  url.py
news_storage/: DB_Plan.md  Dockerfile  README.md  base.py  config.py  consumer.py  database.py  models.py  operations.py  pyproject.toml  requirements.txt  setup.py
news_storage/scripts/: apply_template_changes.sh  run_migrations.sh
news_storage/src/: __init__.py  config.py  consumer.py  database.py  database.py.new  deps.py  models.bak  models.py  operations.py
news_storage/src/crud/: __init__.py  article.py  base.py  comment.py
news_storage/src/schemas/: __init__.py  article.py  comment.py
news_storage/web_ui/: Dockerfile  README.md  __init__.py  app.py  requirements.txt
news_storage/web_ui/templates/: index.html
news_visualizer/news_ui/: Dockerfile  README.md  __init__.py  app.py  collection_service.py  docker-compose.yml  exceptions.py  logging_config.py  pyproject.toml  test_app.py  ui.py  validators.py
news_visualizer/news_ui/modules/: database.py  decorators.py  eventdb.csv  logging_config.py  migrate_events.py  models.py
news_visualizer/news_ui/pages/: 1_Collection.py  (+2 more)
news_visualizer/web_ui/: Dockerfile  app.py  pyproject.toml
(+97 files in other folders)
