[tool.poetry]
name = "news-collector-api"
version = "0.1.0"
description = "News Collector API Service"
authors = ["Project Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = "0.24.0"
pydantic = "2.5.1"
pika = "1.3.2"
psutil = "5.9.6"
python-multipart = "0.0.6"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
prometheus-client = "0.19.0"
aiohttp = "3.9.1"
sqlalchemy = "2.0.23"
asyncpg = "0.29.0"
python-dotenv = "1.0.0"
requests = "2.31.0"
pytz = "^2024.1"
beautifulsoup4 = "^4.12.3"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"
python-dateutil = "^2.8.2"
aio-pika = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
