[tool.poetry]
name = "news-ui"
version = "0.1.0"
description = "News Visualization UI"
authors = ["Project Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.31.0"
pandas = "^2.2.0"
plotly = "^5.19.0"
pytz = "^2024.1"
altair = "^5.2.0"
sqlalchemy = "^2.0.0"
pika = "^1.3.0"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
