[tool.poetry]
name = "web-ui"
version = "0.1.0"
description = "Web UI Service"
authors = ["Project Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = ">=2.0.0"
sqlalchemy = ">=1.4.0"
psycopg2-binary = ">=2.9.0"
python-dotenv = ">=0.19.0"
pytz = ">=2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
